# raytracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  run.sh
src/: engine.hpp  main.cpp  material.hpp  raytracer.hpp
